--- a/7.0.0-beta2/headings.html
+++ b/7.0.0-beta2/headings.html
@@ -12,7 +12,7 @@
 				<img src="./images/common/user-manual.svg" />
 			</span>
 			<span class="heading-title offwhitetext largefont">version 7.0.0-beta2</span>
-			<span class="heading-title offwhitetext">July 11, 2025</span>
+			<span class="heading-title offwhitetext">July 14, 2025</span>
 		</div>
 		<div style="margin-bottom: 0em; margin-top: 0.25em">
 			<ul class="small-items">
@@ -101,13 +101,13 @@
 				<li>
 					<a href="py.html" target="entry">Python</a> </li>
 				<li>
-					<a href="r.html" target="entry">R</a> </li>
-				<li>
 					<a href="resource.html" target="entry">Resource</a> </li>
 				<li>
 					<a href="rnd.html" target="entry">Rnd</a> </li>
 				<li>
 					<a href="sound.html" target="entry">Sound</a> </li>
+				<li>
+					<a href="sr.html" target="entry">Simple R</a> </li>
 				<li>
 					<a href="table.html" target="entry">Table</a> </li>
 				<li>
