--- a/7.0.0-beta2/rnd.html
+++ b/7.0.0-beta2/rnd.html
@@ -254,10 +254,10 @@
 			<a href="palette.html">Palette</a>
 			<a href="profiler.html">Profiler</a>
 			<a href="py.html">Python</a>
-			<a href="r.html">R</a>
 			<a href="resource.html">Resource</a>
 			<a href="rnd.html">Rnd</a>
 			<a href="sound.html">Sound</a>
+			<a href="sr.html">Simple R</a>
 			<a href="table.html">Table</a>
 			<a href="time.html">Time</a>
 			<a href="vid.html">Vid</a>
@@ -375,10 +375,10 @@
 			<a href="palette.html">Palette</a>
 			<a href="profiler.html">Profiler</a>
 			<a href="py.html">Python</a>
-			<a href="r.html">R</a>
 			<a href="resource.html">Resource</a>
 			<a href="rnd.html">Rnd</a>
 			<a href="sound.html">Sound</a>
+			<a href="sr.html">Simple R</a>
 			<a href="table.html">Table</a>
 			<a href="time.html">Time</a>
 			<a href="vid.html">Vid</a>
@@ -502,9 +502,9 @@
 <tr><th></th><th>From an AgentSet</th><th>From a List</th></tr>
 </thead>
 <tbody>
-<tr><td>One item</td><td><a href="#rnd:weighted-one-of"><code>rnd:weighted-one-of</code></a></td><td><a href="#rnd:weighted-one-of-list"><code>rnd:weighted-one-of-list</code></a></td></tr>
-<tr><td>Many items, without repeats</td><td><a href="#rnd:weighted-n-of"><code>rnd:weighted-n-of</code></a></td><td><a href="#rnd:weighted-n-of-list"><code>rnd:weighted-n-of-list</code></a></td></tr>
-<tr><td>Many items, with repeats</td><td><a href="#rnd:weighted-n-of-with-repeats"><code>rnd:weighted-n-of-with-repeats</code></a></td><td><a href="#rnd:weighted-n-of-list-with-repeats"><code>rnd:weighted-n-of-list-with-repeats</code></a></td></tr>
+<tr><td>One item</td><td><a href="#rndweighted-one-of"><code>rnd:weighted-one-of</code></a></td><td><a href="#rndweighted-one-of-list"><code>rnd:weighted-one-of-list</code></a></td></tr>
+<tr><td>Many items, without repeats</td><td><a href="#rndweighted-n-of"><code>rnd:weighted-n-of</code></a></td><td><a href="#rndweighted-n-of-list"><code>rnd:weighted-n-of-list</code></a></td></tr>
+<tr><td>Many items, with repeats</td><td><a href="#rndweighted-n-of-with-repeats"><code>rnd:weighted-n-of-with-repeats</code></a></td><td><a href="#rndweighted-n-of-list-with-repeats"><code>rnd:weighted-n-of-list-with-repeats</code></a></td></tr>
 </tbody>
 </table>
 <p>(<strong>Note:</strong> the initial version of the extension had a single set of primitives for both lists and agentsets, but it turned out to be confusing, so we changed it. If you were using the old version of the extension, you will need to modify your code to use the new primitives.)</p>
