--- a/7.0.0-beta2/contact.html
+++ b/7.0.0-beta2/contact.html
@@ -255,10 +255,10 @@
 			<a href="palette.html">Palette</a>
 			<a href="profiler.html">Profiler</a>
 			<a href="py.html">Python</a>
-			<a href="r.html">R</a>
 			<a href="resource.html">Resource</a>
 			<a href="rnd.html">Rnd</a>
 			<a href="sound.html">Sound</a>
+			<a href="sr.html">Simple R</a>
 			<a href="table.html">Table</a>
 			<a href="time.html">Time</a>
 			<a href="vid.html">Vid</a>
@@ -376,10 +376,10 @@
 			<a href="palette.html">Palette</a>
 			<a href="profiler.html">Profiler</a>
 			<a href="py.html">Python</a>
-			<a href="r.html">R</a>
 			<a href="resource.html">Resource</a>
 			<a href="rnd.html">Rnd</a>
 			<a href="sound.html">Sound</a>
+			<a href="sr.html">Simple R</a>
 			<a href="table.html">Table</a>
 			<a href="time.html">Time</a>
 			<a href="vid.html">Vid</a>
@@ -505,7 +505,7 @@ our staff and our various research activities.</p>
 or try this group:
 <a href="http://groups.google.com/d/forum/netlogo-users" target="_blank">http://groups.google.com/d/forum/netlogo-users</a>.</p>
 <p>If you have feedback, suggestions, or questions, you may write us at
-<a href="&#x6d;&#x61;i&#108;&#x74;&#111;&#x3a;f&#101;&#x65;&#x64;&#98;&#97;&#99;k&#x40;c&#x63;&#x6c;&#x2e;n&#111;r&#116;h&#x77;&#101;&#x73;&#x74;e&#114;&#x6e;&#46;&#x65;d&#x75;">&#102;&#x65;&#101;&#x64;&#x62;&#x61;&#99;&#x6b;&#x40;&#99;&#99;&#x6c;&#x2e;&#110;o&#114;&#x74;&#104;&#x77;&#x65;&#x73;&#x74;e&#x72;&#110;&#46;&#x65;&#100;&#117;</a>.</p>
+<a href="m&#97;&#x69;l&#x74;&#111;:&#x66;&#x65;&#101;&#100;&#x62;&#x61;&#x63;k&#64;&#99;&#99;l&#x2e;&#110;&#x6f;&#114;&#116;&#x68;&#x77;&#101;&#115;&#x74;&#101;&#114;&#x6e;&#46;&#101;&#x64;u">&#102;&#101;e&#x64;b&#97;&#99;&#x6b;&#x40;&#99;&#99;&#x6c;&#46;&#x6e;&#x6f;&#x72;&#x74;&#104;&#119;&#x65;&#x73;t&#x65;&#114;&#110;&#x2e;&#101;&#100;u</a>.</p>
 <h2><a href="#reporting-bugs" id="reporting-bugs" class="section-anchor">Reporting bugs</a></h2>
 <p>Our public bug tracker is on GitHub at
 <a href="https://github.com/NetLogo/NetLogo/issues" target="_blank">https://github.com/NetLogo/NetLogo/issues</a>.
@@ -526,7 +526,7 @@ clicking the System tab.</li>
 message into your email, or make a screen capture if you are unable to copy
 and paste.</li>
 </ul>
-<p>We also accept bug reports by email at <a href="&#x6d;&#x61;i&#x6c;&#x74;&#111;&#x3a;&#x62;&#x75;&#103;s&#x40;&#x63;&#x63;&#x6c;&#46;&#x6e;&#x6f;&#x72;&#116;&#x68;&#119;&#101;&#x73;te&#114;&#110;.&#x65;&#x64;&#x75;">&#98;&#x75;&#103;&#x73;&#64;&#99;&#x63;&#108;&#46;&#x6e;&#x6f;r&#116;&#x68;&#x77;&#101;&#115;&#116;e&#114;&#x6e;&#46;&#x65;&#x64;&#117;</a>.</p>
+<p>We also accept bug reports by email at <a href="&#109;&#x61;&#105;&#x6c;&#116;&#x6f;:&#x62;&#x75;&#103;&#x73;&#x40;&#x63;&#99;&#x6c;&#x2e;&#110;&#x6f;&#114;t&#104;w&#x65;&#x73;&#x74;&#101;&#114;&#110;&#46;&#101;&#100;u">&#98;&#x75;&#103;&#x73;&#x40;c&#x63;&#x6c;&#x2e;&#110;o&#x72;&#x74;&#104;&#x77;&#x65;&#115;&#116;&#x65;&#x72;&#110;&#46;&#101;d&#x75;</a>.</p>
 <h2><a href="#open-source" id="open-source" class="section-anchor">Open source</a></h2>
 <p>NetLogo is free, open source software. The source code is hosted at
 <a href="https://github.com/NetLogo/NetLogo" target="_blank">https://github.com/NetLogo/NetLogo</a>. Contributions from interested users are
