--- a/7.0.0-beta2/dict/no-display.html
+++ b/7.0.0-beta2/dict/no-display.html
@@ -17,7 +17,7 @@
     <div class="dict_entry" id="no-display">
  <h3><a>no-display<span class="since">1.0</span></a></h3>
  <h4><span class="prim_example">no-display</span></h4>
- <p>Turns off all updates to the current view until the display command is issued. This has two major uses.</p>
+ <p>Turns off all updates to the current view until the display command is issued. This does not affect the display of plots. The primitive has two major uses:</p>
  <p>One, you can control when the user sees view updates. You might want to change lots of things on the view behind the user's back, so to speak, then make them visible to the user all at once.</p>
  <p>Two, your model will run faster when view updating is off, so if you're in a hurry, this command will let you get results faster. (Note that normally you don't need to use no-display for this, since you can also use the on/off switch in view control strip to freeze the view.)</p>
  <p>Note that display and no-display operate independently of the switch in the view control strip that freezes the view.</p>
