--- a/7.0.0-beta2/dictionary.html
+++ b/7.0.0-beta2/dictionary.html
@@ -309,10 +309,10 @@
 			<a href="palette.html">Palette</a>
 			<a href="profiler.html">Profiler</a>
 			<a href="py.html">Python</a>
-			<a href="r.html">R</a>
 			<a href="resource.html">Resource</a>
 			<a href="rnd.html">Rnd</a>
 			<a href="sound.html">Sound</a>
+			<a href="sr.html">Simple R</a>
 			<a href="table.html">Table</a>
 			<a href="time.html">Time</a>
 			<a href="vid.html">Vid</a>
@@ -430,10 +430,10 @@
 			<a href="palette.html">Palette</a>
 			<a href="profiler.html">Profiler</a>
 			<a href="py.html">Python</a>
-			<a href="r.html">R</a>
 			<a href="resource.html">Resource</a>
 			<a href="rnd.html">Rnd</a>
 			<a href="sound.html">Sound</a>
+			<a href="sr.html">Simple R</a>
 			<a href="table.html">Table</a>
 			<a href="time.html">Time</a>
 			<a href="vid.html">Vid</a>
@@ -6419,8 +6419,11 @@ show n-values 5 [ x -&gt; x * x ]
           <img alt="Turtle Command" src="images/turtle.png" width=16 height=16/> <img alt="Patch Command" src="images/patch.png" width=16 height=16/>
         </h4>
         <p>
-          Reports an agentset containing the 8 surrounding patches
-          (neighbors) or 4 surrounding patches (neighbors4).
+          Reports an agentset containing the 8 surrounding patches (neighbors) or 4 surrounding patches (neighbors4),
+          if they exist. If the world is wrapping, the neighbors of a patch along the edge of the world will include
+          the corresponding patches on the opposite edge of the world. If the world is not wrapping, any neighbors
+          outside the boundaries of the world will be excluded from the set. The neighbor set will never include the
+          target patch itself, even if the world only has one row or one column of patches.
         </p>
         <pre>
 show sum [count turtles-here] of neighbors
@@ -6549,7 +6552,8 @@ show netlogo-version
         </h4>
         <p>
           Turns off all updates to the current view until the display command
-          is issued. This has two major uses.
+          is issued. This does not affect the display of plots. The primitive
+          has two major uses:
         </p>
         <p>
           One, you can control when the user sees view updates. You might
