--- a/7.0.0-beta2/faq.html
+++ b/7.0.0-beta2/faq.html
@@ -284,10 +284,10 @@
 			<a href="palette.html">Palette</a>
 			<a href="profiler.html">Profiler</a>
 			<a href="py.html">Python</a>
-			<a href="r.html">R</a>
 			<a href="resource.html">Resource</a>
 			<a href="rnd.html">Rnd</a>
 			<a href="sound.html">Sound</a>
+			<a href="sr.html">Simple R</a>
 			<a href="table.html">Table</a>
 			<a href="time.html">Time</a>
 			<a href="vid.html">Vid</a>
@@ -405,10 +405,10 @@
 			<a href="palette.html">Palette</a>
 			<a href="profiler.html">Profiler</a>
 			<a href="py.html">Python</a>
-			<a href="r.html">R</a>
 			<a href="resource.html">Resource</a>
 			<a href="rnd.html">Rnd</a>
 			<a href="sound.html">Sound</a>
+			<a href="sr.html">Simple R</a>
 			<a href="table.html">Table</a>
 			<a href="time.html">Time</a>
 			<a href="vid.html">Vid</a>
@@ -673,7 +673,7 @@ colored blocks.</p>
 or (at your option) any later version.</p>
 <p>Commercial licenses are also available. To inquire about commercial licenses,
 please contact Uri Wilensky at
-<a href="mailto:netlogo-commercial-admin@ccl.northwestern.edu"><a href="&#x6d;&#x61;&#105;&#x6c;&#116;&#x6f;&#x3a;&#x6e;&#101;&#x74;&#108;o&#103;&#111;-&#99;o&#109;&#x6d;&#101;&#114;&#x63;i&#x61;&#x6c;&#45;&#97;&#x64;&#109;i&#x6e;&#64;&#99;&#99;&#108;&#46;&#x6e;&#x6f;&#x72;&#116;&#x68;&#x77;&#101;&#115;&#x74;&#101;r&#x6e;&#x2e;&#x65;&#100;u">&#x6e;e&#x74;&#x6c;&#x6f;&#x67;o&#45;&#99;&#111;&#109;&#x6d;&#101;&#x72;&#x63;i&#x61;&#x6c;&#45;&#97;&#x64;m&#105;&#x6e;&#x40;&#99;&#x63;&#108;&#x2e;&#110;&#111;&#x72;&#x74;h&#119;&#x65;&#115;&#x74;e&#x72;&#110;&#x2e;&#101;&#100;u</a></a>.</p>
+<a href="mailto:netlogo-commercial-admin@ccl.northwestern.edu"><a href="&#109;a&#105;&#108;t&#x6f;:&#x6e;&#x65;&#116;&#x6c;&#x6f;&#x67;o&#x2d;&#x63;&#111;&#x6d;m&#101;&#114;&#99;&#105;&#x61;&#108;&#45;&#x61;&#x64;&#x6d;i&#x6e;&#64;&#99;&#99;&#108;&#x2e;&#110;o&#x72;&#x74;hw&#x65;&#x73;t&#x65;&#x72;n&#46;&#101;&#100;&#117;">&#110;&#x65;&#116;&#108;&#111;&#103;&#111;&#x2d;&#99;&#x6f;&#109;&#109;&#101;r&#x63;&#x69;&#97;&#x6c;&#x2d;&#97;&#100;&#x6d;&#x69;n@&#x63;&#x63;l&#x2e;&#110;&#x6f;r&#116;&#104;&#119;&#x65;&#115;&#116;e&#x72;&#x6e;.&#101;&#100;u</a></a>.</p>
 <p>The source code is
 <a href="https://github.com/NetLogo/NetLogo" target="_blank">on GitHub, here</a>. Development discussion is
 on the <a href="https://groups.google.com/group/netlogo-devel" target="_blank">netlogo-devel</a> group.</p>
