--- a/7.0.0-beta2/netlogo7intro.html
+++ b/7.0.0-beta2/netlogo7intro.html
@@ -255,10 +255,10 @@
 			<a href="palette.html">Palette</a>
 			<a href="profiler.html">Profiler</a>
 			<a href="py.html">Python</a>
-			<a href="r.html">R</a>
 			<a href="resource.html">Resource</a>
 			<a href="rnd.html">Rnd</a>
 			<a href="sound.html">Sound</a>
+			<a href="sr.html">Simple R</a>
 			<a href="table.html">Table</a>
 			<a href="time.html">Time</a>
 			<a href="vid.html">Vid</a>
@@ -376,10 +376,10 @@
 			<a href="palette.html">Palette</a>
 			<a href="profiler.html">Profiler</a>
 			<a href="py.html">Python</a>
-			<a href="r.html">R</a>
 			<a href="resource.html">Resource</a>
 			<a href="rnd.html">Rnd</a>
 			<a href="sound.html">Sound</a>
+			<a href="sr.html">Simple R</a>
 			<a href="table.html">Table</a>
 			<a href="time.html">Time</a>
 			<a href="vid.html">Vid</a>
@@ -536,6 +536,7 @@ changes in NetLogo 7.0.0</p>
 <li><a href="#help-menu">Help Menu</a></li>
 </ul>
 </li>
+<li><a href="#collection-of-anonymous-usage-statistics">Collection of anonymous usage statistics</a></li>
 </ul>
 </div>
 <p>For a video showing changes in NetLogo 7, <a href="https://www.youtube.com/watch?v=Xeagb1Y-xKU" target="_blank">see here</a>.</p>
@@ -784,7 +785,7 @@ checked, NetLogo will bring you to the location of an error if one
 occurs during compilation.</p>
 <p><strong>Open code tab in separate window on startup</strong>: When checked the
 Code tab will appear in a separate window when NetLogo is opened.</p>
-<p><strong>Jump slider widget thumb to mouse location on click (instead of incrementing)</strong>:
+<p><strong>Jump sliders to click location (instead of incrementing)</strong>:
 When checked, clicking anywhere in the slider bar of a slider widget will move the
 thumb to that location. When unchecked, the pre-NetLogo 7 behavior will be applied,
 and clicking in the slider bar will increase or decrease the value of the slider by
@@ -822,4 +823,15 @@ the model’s collection of shapes.</p>
 <p>The Help Menu now has a link to
 the <a href="https://forum.netlogo.org/" target="_blank">NetLogo Forum</a>, a website to ask/answer
 questions and have discussions about NetLogo.</p>
+<h2><a href="#collection-of-anonymous-usage-statistics" id="collection-of-anonymous-usage-statistics" class="section-anchor">Collection of anonymous usage statistics</a></h2>
+<p>When you first open NetLogo after installing it, a dialog titled &ldquo;Data Consent&rdquo; will appear.
+If you select &ldquo;Yes&rdquo;, data will be sent to the NetLogo team. We analyze the data in order to
+understand how often certain NetLogo features are being used. This informs development priorities.
+No personal or identifying information will be collected. You can always change
+your preference by using the
+<a href="netlogopreferences.html#send-anonymous-usage-statistics">Send anonymous usage statistics</a>
+option of the <a href="netlogopreferences.html#overview">NetLogo Preferences Dialog</a> to enable or
+disable data collection.
+If you have any questions or concerns about the collection and storage of this data,
+feel free to contact the NetLogo team at <a href="&#109;a&#105;&#x6c;&#116;&#x6f;&#58;&#x66;&#101;&#101;&#100;&#x62;&#x61;&#99;k&#x40;&#99;&#x63;&#x6c;&#x2e;&#110;&#x6f;&#114;&#116;&#104;&#x77;&#101;s&#x74;&#101;&#x72;&#x6e;&#x2e;&#x65;d&#x75;">&#102;e&#101;&#100;&#x62;&#97;c&#x6b;&#x40;&#99;&#x63;&#108;&#x2e;no&#x72;&#116;&#x68;&#119;e&#x73;&#116;&#x65;&#x72;&#110;&#x2e;e&#100;&#117;</a>.</p>
 </main>
