--- a/7.0.0-beta2/template.html
+++ b/7.0.0-beta2/template.html
@@ -246,10 +246,10 @@
 						<a href="palette.html" target="entry">Palette</a>
 						<a href="profiler.html" target="entry">Profiler</a>
 						<a href="py.html" target="entry">Python</a>
-						<a href="r.html" target="entry">R</a>
 						<a href="resource.html" target="entry">Resource</a>
 						<a href="rnd.html" target="entry">Rnd</a>
 						<a href="sound.html" target="entry">Sound</a>
+						<a href="sr.html" target="entry">Simple R</a>
 						<a href="table.html" target="entry">Table</a>
 						<a href="time.html" target="entry">Time</a>
 						<a href="vid.html" target="entry">Vid</a>
