--- a/7.0.0-beta2/time.html
+++ b/7.0.0-beta2/time.html
@@ -254,10 +254,10 @@
 			<a href="palette.html">Palette</a>
 			<a href="profiler.html">Profiler</a>
 			<a href="py.html">Python</a>
-			<a href="r.html">R</a>
 			<a href="resource.html">Resource</a>
 			<a href="rnd.html">Rnd</a>
 			<a href="sound.html">Sound</a>
+			<a href="sr.html">Simple R</a>
 			<a href="table.html">Table</a>
 			<a href="time.html">Time</a>
 			<a href="vid.html">Vid</a>
@@ -375,10 +375,10 @@
 			<a href="palette.html">Palette</a>
 			<a href="profiler.html">Profiler</a>
 			<a href="py.html">Python</a>
-			<a href="r.html">R</a>
 			<a href="resource.html">Resource</a>
 			<a href="rnd.html">Rnd</a>
 			<a href="sound.html">Sound</a>
+			<a href="sr.html">Simple R</a>
 			<a href="table.html">Table</a>
 			<a href="time.html">Time</a>
 			<a href="vid.html">Vid</a>
@@ -504,7 +504,7 @@
 <li><a href="#format">Format</a></li>
 <li><a href="#primitives">Primitives</a></li>
 <li><a href="#datetime-utilities">Date/Time Utilities</a></li>
-<li><a href="#time:-series-tool">Time Series Tool</a></li>
+<li><a href="#time-series-tool">Time Series Tool</a></li>
 <li><a href="#discrete-event-scheduler">Discrete Event Scheduler</a></li>
 <li><a href="#building">Building</a></li>
 <li><a href="#authors">Authors</a></li>
